# ioq3-for-UrbanTerror-4

./: .gitignore  CMakeLists.txt  update-cmakelists.sh
